[workspace]
resolver = "2"
members = [
    "lib/armv9a",
    "lib/cca-token",
    "lib/cose",
    "lib/labeling",
    "lib/rsi-el0",
    "lib/uart",
    "lib/vmsa",
    "plat/fvp",
    "realm/rsi-test",
    "rmm/",
    "sdk",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
